--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
   *{
     margin: 0;
   }
-  .hero-nav{
+  .container{
     border-radius: 1rem;
     width: 90%;
     margin: 4rem auto;
@@ -54,3 +54,213 @@ cursor: pointer;
   color:rgb(255, 84, 0)
 }
 
+
+
+/* baner */
+.section-container{
+  background-image:  linear-gradient(180.00deg, rgba(19, 19, 24, 0.8),rgba(19, 19, 24, 0) 100%),url(Images/Group\ 13\ \(1\)\ \(1\).png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* max-width: 90%; */
+  min-height: 500px;
+  /* margin: 0 auto; */
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.explore-container h3{
+  color: rgb(255, 255, 255);
+  font-size: 4rem;
+  font-weight: 800;
+}
+.explore-container p{
+  color: rgb(255, 255, 255);
+font-size: 1rem;
+font-weight: 400;
+margin-top: 26px;
+margin-bottom: 48px;
+}
+.travel-input{
+  /* width: 800px;
+height: 84px; */
+border-radius: .5rem;
+padding: 1rem;
+background-color: rgba(255, 255, 255, 0.3);
+display: flex;
+justify-content: space-around;
+align-items: center;
+backdrop-filter: blur(2px);
+
+}
+input, select{
+  width: 175px;
+  height: 50px;
+  padding: 0 0.5rem;
+  margin: 0 1rem;
+  border-radius: .5rem;
+  border: none;
+  cursor: pointer;
+}
+.btn-primary{
+  width: 175px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding: 0.7rem 1.2rem;
+  border-radius: .5rem;
+  border: none;
+  background-color: rgb(255, 84, 0);
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+  font-weight: 800;
+}
+.btn-primary:hover{
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.popular-section{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5rem;
+  
+}
+.popular-section img{
+  width: 100%;
+  height: 100%;
+}
+.text-content{
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  justify-content: space-evenly;
+
+}
+.text-content p, 
+.text-content li{
+  color: rgba(19, 19, 24, 0.7);
+  font-size: 1rem;
+  font-weight: 400;
+}
+.your-destination{
+  text-align: center;
+}
+.your-destination img{
+  width: 100%;
+   height: 300px;
+  filter: brightness(70%);
+}
+.row-1{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 2rem 0;
+  gap: 1rem;
+}
+.country-card{
+  position: relative;
+}
+.country {
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  color: rgb(255, 255, 255);
+font-size: 1.8rem;
+font-weight: 800;
+transform: translate(-50%, -50%);
+
+}
+.row-2{
+  display: grid;
+  grid-template-columns: 0.8fr 1.5fr 0.7fr;
+  margin: 2rem 0;
+  gap: 1rem;
+}
+.row-3{
+  display: grid;
+  grid-template-columns: 0.75fr  1.25fr;
+  margin: 2rem 0;
+  gap: 1rem;
+}
+
+.footer-section{
+  background: rgba(19, 19, 24, 0.05);
+  padding: 2rem 0;
+}
+.footer-section .logo{
+  margin: 2rem auto;
+}
+.social{
+  width: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 2rem auto;
+}
+.social i{
+  height: 44px;
+  font-size: 1.5rem;
+}
+.footer-section hr{
+  margin: 2rem 0;
+}
+.footer-section p{
+  text-align: center;
+  
+}
+.ham-burger{
+  display: none;
+}
+
+@media screen and (max-width: 576px){
+  .nav-options{
+    display: none;
+
+  }
+  .ham-burger{
+    display: block;
+  }
+  h3{
+    font-size: 26px;
+  }
+  .ham-burger i{
+    font-size: 26px;
+  }
+  .container{
+    margin: 3rem auto;
+  }
+  p{
+    font-size: 16px;
+  }
+  .explore-container h3{
+    font-size: 26px;
+  }
+  .explore-container p{
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 10px;
+  }
+  .travel-input{
+    flex-direction: column;
+    width: 70%;
+    margin: auto;
+    margin-top: 10px;
+    gap: 10px;
+  }
+  .travel-input input,
+  .travel-input select,
+  .travel-input button{
+    width: 100%;
+  }
+ .popular-section, .row-1, .row-2, .row-3{
+  grid-template-columns: 1fr;
+ }
+ .footer-section .container .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ }
+ 
+}
