--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ input, select{
   margin: 0 1rem;
   border-radius: .5rem;
   border: none;
-  cursor: pointer;
+  
 }
 .btn-primary{
   width: 175px;
@@ -213,6 +213,143 @@ transform: translate(-50%, -50%);
 .ham-burger{
   display: none;
 }
+.choose-us-section{
+  text-align: center;
+}
+.choose-us-section p{
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.choose-us-content{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  text-align: start;
+  align-items: center;
+  justify-items: center;
+  row-gap: 20px;
+  /* column-gap: 10px; */
+}
+.best-price{
+   grid-column: 1 / 3;
+}
+ .hotels, .service, .best-price{
+  max-width: 574px;
+  border-radius: 1rem;
+  padding: 32px;
+}
+.choose-us-content h4{
+  color: rgb(19, 19, 24);
+font-size: 1.5rem;
+margin-top: 32px;
+}
+.choose-us-content p{
+  color: rgb(90, 90, 93);
+font-size: 1rem;
+}
+.choose-us-content img{
+  width: 13%;
+}
+#color-1{
+  box-sizing: border-box;
+border: 1px solid rgba(251, 181, 99, 0.2);
+background-color: rgba(251, 181, 99, 0.05);
+}
+#color-2{
+  box-sizing: border-box;
+  border: 1px solid rgba(41, 206, 246, 0.2); 
+  background: rgba(41, 206, 246, 0.05);
+}
+#color-3{
+  box-sizing: border-box;
+  border: 1px solid rgba(233, 68, 68, 0.2);  
+  background: rgba(233, 68, 68, 0.05);
+}
+.news-section{
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+
+}
+.news-content{
+  border: 1px solid rgb(255, 84, 0);
+border-radius: 1rem;
+padding: 40px;
+ 
+}
+.news-content h3{
+  color: rgb(19, 19, 24);
+font-size: 1.2rem;
+font-weight: 800;
+}
+.news-content p{
+  ccolor: rgb(90, 90, 93);
+  font-weight: 400;
+font-size: 1rem;
+margin-top: 16px;
+
+}
+.news-content hr{
+  margin-top: 32px;
+  margin-bottom: 24px;
+  
+}
+ .input-news{
+  border-radius: .5rem;
+
+flex-direction: column;
+display: flex;
+justify-content: space-around;
+align-items: center;
+ }
+ .input-news input{
+  border-radius: 0.5rem;
+ background: rgba(19, 19, 24, 0.05);
+ width: 393px;
+height: 52px;
+padding: 0 0.5rem;
+margin: 0.7rem 0;
+
+ }
+ .btn-second{
+  margin: 0.7rem 0;
+  width: 410px;
+height: 52px;
+border-radius: 0.5rem;
+border: none;
+cursor: pointer;
+background: rgb(255, 84, 0);
+color: rgb(255, 255, 255);
+font-family: Mulish;
+font-size: 1.2rem;
+font-weight: 800;
+text-align: center;
+ }
+ .news-image img{
+  width:100%;
+ }
+ .news-image{
+  position: relative;
+  display: inline-block;
+ }
+ .text-overlay{
+  position: absolute;
+  bottom: 11%;
+  right: 1%;
+
+
+  transform: rotate(-19.63deg);
+  border-radius: 1rem;
+
+background-color: rgb(255, 84, 0);/* Background color with transparency */
+  color: white;
+  padding: 25px;
+  width: 300px;
+  height: 120px;
+  text-align: center;
+  box-sizing: border-box;
+  cursor: pointer;
+  
+ }
 
 @media screen and (max-width: 576px){
   .nav-options{
@@ -242,6 +379,33 @@ transform: translate(-50%, -50%);
     margin: 0 auto;
     margin-top: 10px;
   }
+  .news-section{
+    flex-direction: column;
+  }
+  .input-news input{
+   
+    width: 90%;
+    margin: auto;
+    margin-top: 10px;
+    gap: 10px;
+    
+  }
+  .btn-second{
+    width: 95%;
+    margin: auto;
+    margin-top: 10px;
+    gap: 10px;
+  }
+  .text-overlay{
+    width: 50%;
+    height: 40%;
+  }
+  .text-overlay h3{
+    font-size: 0.9rem;
+  }
+  .text-overlay p{
+    font-size: 0.7rem;
+  }
   .travel-input{
     flex-direction: column;
     width: 70%;
@@ -254,13 +418,17 @@ transform: translate(-50%, -50%);
   .travel-input button{
     width: 100%;
   }
- .popular-section, .row-1, .row-2, .row-3{
+ .popular-section, .row-1, .row-2, .row-3, .choose-us-content{
   grid-template-columns: 1fr;
+ }
+ .best-price{
+    grid-column: auto;
  }
  .footer-section .container .logo {
   display: flex;
   justify-content: center;
   align-items: center;
+
  }
  
 }
