--- a/style.css
+++ b/style.css
@@ -351,6 +351,120 @@ background-color: rgb(255, 84, 0);/* Background color with transparency */
   
  }
 
+
+
+ .deals-section{
+  text-align: center;
+  margin-top: 100px;
+ }
+ .deals-section p{
+  color: rgba(19, 19, 24, 0.7);
+font-family: Mulish;
+font-size: 1rem;
+font-weight: 400;
+margin-top: 24px;
+ }
+.deals-content{
+  height: 500px;
+  border-radius: 1rem;
+  display: flex;
+  background-image: url("Images/Group\ 39.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 48px;
+
+}
+.deals-content-1{
+  height: 500px;
+  border-radius: 1rem;
+  display: flex;
+  background-image: url("Images/Group\ 40.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 48px;
+}
+.deals-tour{
+  width: 50%;
+}
+.satorini{
+  width: 579px;
+height: 389px;
+  margin: 56px;
+ 
+  border-radius: 1rem;
+  box-sizing: border-box;
+  border: 2px solid rgb(255, 255, 255);
+  backdrop-filter: blur(3px);
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 50px;
+}
+.span-font{
+  margin-left: 35px;
+
+}
+.span-font i{
+  color: rgb(255, 84, 0);
+  margin-right: 2px;
+}
+.span{
+  color: rgb(90, 90, 93);
+font-family: Mulish;
+font-size: 1rem;
+font-weight: 400;
+
+
+}
+.text-tour{
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+  justify-content: center;
+  text-align: start;
+}
+.satorini h4{
+  color: rgb(19, 19, 24);
+font-size: 1.5rem;
+font-weight: 800;
+margin-top: 26px;
+margin-bottom: 16px;
+}
+.satorini p{
+  color: rgb(90, 90, 93);
+font-size: 1rem;
+font-weight: 400;
+margin-bottom: 16px;
+
+}
+.text-price{
+  color: rgb(255, 84, 0);
+font-size: 1.1rem;
+font-weight: 800;
+}
+.btn-third{
+  border-radius: .8rem;
+  border: none;
+  width: 150px;
+height: 52px;
+margin-top: 24px;
+background: rgb(255, 84, 0);
+color: rgb(255, 255, 255);
+font-size: 1.1rem;
+font-weight: 800;
+cursor: pointer;
+}
+.btn-packages{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 48px;
+  margin-bottom: 100px;
+}
+
+
+
+
 @media screen and (max-width: 576px){
   .nav-options{
     display: none;
@@ -379,7 +493,7 @@ background-color: rgb(255, 84, 0);/* Background color with transparency */
     margin: 0 auto;
     margin-top: 10px;
   }
-  .news-section{
+  .news-section, .deals-content, .deals-content-1{
     flex-direction: column;
   }
   .input-news input{
@@ -431,4 +545,13 @@ background-color: rgb(255, 84, 0);/* Background color with transparency */
 
  }
  
+ .deals-tour{
+  width: 0%;
+ }
+ .satorini{
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 20px;
+  height: 80%;
+ }
 }
