--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ input, select{
   font-weight: 800;
 }
 .btn-primary:hover{
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color:aquamarine;
 }
 .popular-section{
   display:grid;
@@ -410,7 +410,6 @@ height: 389px;
 }
 .span{
   color: rgb(90, 90, 93);
-font-family: Mulish;
 font-size: 1rem;
 font-weight: 400;
 
@@ -551,7 +550,30 @@ cursor: pointer;
  .satorini{
   width: 80%;
   margin: 0 auto;
-  margin-top: 20px;
-  height: 80%;
+  margin-top: 90px;
+  padding: 25px;
+  /* height: 80%; */
+ }
+ .satorini h4{
+  font-size: 1rem;
+ }
+ .satorini p{
+  font-size: 0.8rem;
+ }
+ .text-price{
+  font-size: 0.7rem;
+ }
+ .btn-third{
+  width: 60%;
+  font-size: .9rem;
+  height: 45px;
+  align-items: flex-start;
+ }
+ .span-font{
+  margin-left: 10px;
+  font-size: small;
+ }
+ .span-font i{
+  margin-left: 10px;
  }
 }
